Added several image files, css file, and added several paragraphs of text

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Science Education</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -16,12 +17,102 @@
                 <li><a href="#chemistry">Chemistry</a></li>
                 <li><a href="#biology">Biology</a></li>
                 <li><a href="#geology">Geology</a></li>
-            </ul>
+            </ul>   
         </nav>
     </header>
 
     <main>
+        <section>
+            <h2>Introduction</h2>
+            <img src="images/science.jpg" width="400"/>
+            <p>
+                Science is a tool to better understand and communicate the feeling of <em><strong>awe</strong></em> that we get when we look up at the stars in the night sky. <br>
+                Follow this link for our <a href="https://tomgtaylor.github.io/code-102/">partners page</a> for more information on science beyond what is on this page!
+            </p>
+        </section>
+
         <section id="physics">
+            <h2>Physics</h2>
+            <img src="images/physics.png" width="250"/>
+            <p>
+                Physics is the most fundamental of the sciences. Its origins are tied closely with the development of mathematics, philosphy, <br>
+                and the development of technology. Everything around you will be enriched with a fuller understanding of physics: from what <br>
+                you see, touch, hear, and feel. The atoms that make up all the material around us can be modeled using electricity and magnetism, <br>
+                quantum mechanics, and other more technical theories. Physics also describes that paths of planets, stars, black holes, and <br>
+                supernove.
+            </p>
+            <p>
+                It's true, mathematics is used heavily to communicate ideas within physics. However, you can understand physics at an intuitive <br>
+                level if you do experiments and ask questions about what you see. Math is used to <em>help</em> communicate, which means it isn't the <br> 
+                the only may to communicate.
+            </p>
+            <h3>Who is a physicist?</h3>
+            <ul>
+                <li>Experimentors at international labs such as CERN</li>
+                <li>Researchers at universities and colleges around the world</li>
+                <li>Astronomers who look up at the stars</li>
+                <li><em>YOU</em> when you ask questions about the world around you</li>
+            </ul>
+        </section>
+
+        <section id="chemistry">
+            <h2>Chemistry</h2>
+            <img src="images/chemistry.png" width="300"/>
+            <p>
+                Chemistry is the language to describe how elements and molecules interact with other particle like objects and their environment.<br>
+                The periodic table of elements is the central concept in introductory chemistry. There are roughly 100 elements that are stable <br>
+                on earth's biosphere. Some elements, if isolated, can react violently by just being exposed to the air around us. Some elements <br>
+                are so stable that it takes very particular conditions to force them to react/interact with other particle like objects.
+            </p>
+            <p>
+                Elements, as a concept, exist to organize the different ways atoms interact. Atoms have two basic components: electrons and the <br>
+                nucleus. Furthermore, the nucleus is composed of both protons and neutrons. Hydrogen, the most basic element (or atom), is an <br>
+                exception and can have only a proton making up its nucleus.
+            </p>
+            <h3>Who is a chemist?</h3>
+            <ul>
+                <li>Chemical Engineers</li>
+                <li>Doctors who research vaccines</li>
+                <li>Material scientists that engineer plastics, metals, and fabrics</li>
+                <li><em>YOU</em> when you ask questions about how liquids, gases, and solids will change when you change the environment around them</li>
+            </ul>
+        </section>
+
+        <section id="biology">
+            <h2>Biology</h2>
+            <img src="images/biology.jpg" width="300" height="150"/>
+            <p>Biology is the language of how chemistry and physics comes together to construct structure in living organisms. Large molecules <br>
+                called proteins, lipids, RNA, and DNA. Although there are <em>many</em> other molecules that make up organisms, these <br>
+                are the major building blocks of life on Earth - and possibly other locations in the universe.
+            </p>
+            <p>
+                Biology is also where the study of medicine has its roots. In the subfield biochemistry, the study of virsus, bacterium, and animals <br>
+                (which includes humans) provides the language to discuss pathogens, disease, and medicines. There are other subfields such as: <br>
+                genetics, which studies DNA; virology, which studies viruses; neurology, which studies nerve tissue; and <em>many</em>, <strong>many</strong> others!
+            </p>
+            <h3>Who is a biologist?</h3>
+            <ul>
+                <li>Neuro surgeons</li>
+                <li>Veterinarians who treat your pets</li>
+                <li>Ecologist who study the way species interact with their ecosystems and environments</li>
+                <li><em>YOU</em> when you ask questions about your health, your heritage, and your environment</li>
+            </ul>
+        </section>
+
+        <section id="geology">
+            <h2>Geology</h2>
+            <img src="images/geology.jpg" width="300"/>
+            <p>
+                Geology has its roots on Earth, along with all the sciences thus established. However, planetary geology is the study of objects <br>
+                throughout our solar system, and beyond. Geo means earth, and is derived from greek. 
+            </p>
+            <h3>Who is a geologist?</h3>
+            <ul>
+                <li>surveyors</li>
+                <li>Archaeologists when they date fossils or lost civilizations that they discover</li>
+                <li>Volcanologists who study volcanoes</li>
+                <li><em>YOU</em> when you ask questions about the land you live on and the history of the solar system</li>
+            </ul>
         </section>
     </main>
     
