added some color

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <img src="images/science.jpg" width="400"/>
             <p>
                 Science is a tool to better understand and communicate the feeling of <em><strong>awe</strong></em> that we get when we look up at the stars in the night sky. <br>
+            </p>
+            <p>
                 Follow this link for our <a href="https://tomgtaylor.github.io/code-102/">partners page</a> for more information on science beyond what is on this page!
             </p>
         </section>
@@ -110,7 +112,7 @@
             <ul>
                 <li>surveyors</li>
                 <li>Archaeologists when they date fossils or lost civilizations that they discover</li>
-                <li>Volcanologists who study volcanoes</li>
+                <li>Volcanologists who studies volcanoes</li>
                 <li><em>YOU</em> when you ask questions about the land you live on and the history of the solar system</li>
             </ul>
         </section>
