--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Science is a tool to better understand and communicate the feeling of <em><strong>awe</strong></em> that we get when we look up at the stars in the night sky. <br>
             </p>
             <p>
-                Follow this link for our <a href="https://tomgtaylor.github.io/code-102/">partners page</a> for more information on science beyond what is on this page!
+                Follow this link for our <a href="https://tomgtaylor.github.io/sci-ed/">partners page</a> for more information on science beyond what is on this page!
             </p>
         </section>
 
