Changing to reading file

--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
 
         <section class="question">
             <h2>Questions?</h2>
-            What is your favorite scientific discipline: physics, chemistry, biology, or geology? Type it here: <input id="scisub">
+            What is your favorite scientific discipline: physics, chemistry, biology, or geology? Type it here: 
+            <input id="scisub">
             <button onclick="submit()">Submit</button>
         </section>
     </main>
