added image of neutron and coded some js

--- a/index.html
+++ b/index.html
@@ -202,7 +202,11 @@
     </main>
 
     <button onclick="hilig()">Click if you are a physicist, chemist, biologist, and geologist!!!</button>
-    
+
+    What would you rate our page from 1-5?: <input id="rank"> <button onclick="printStars();" id="sta">Submit</button>
+
+    <div id="neutrons"></div>
+
     <footer>
         <p>&copy; 2022, ScienceViewEd</p>
     </footer>
